[package]
name = "sts2-sync-companion"
version = "0.1.0"
description = "STS2 Sync — auto-upload Slay the Spire 2 runs"
authors = []
edition = "2021"

[lib]
name = "sts2_sync_companion_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-opener = "2"
tauri-plugin-deep-link = "2"
tauri-plugin-autostart = "2"
tauri-plugin-keyring = "2"
tauri-plugin-fs = "2"
tauri-plugin-notification = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tokio = { version = "1", features = ["full"] }
sha2 = "0.10"
hex = "0.4"
dirs = "5"
notify = "6"
anyhow = "1"
urlencoding = "2"
hostname = "0.4"
